[package]
name = "iso8583-server"
version = "0.1.0"
authors = ["Raghavendra Balgi <rkbalgi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iso8583_rs = "0.1.9"
hex = "0.4.2"
log = "0.4.8"
simplelog = "0.8.0"
hex-literal = "0.2.1"